[tool.poetry]
name = "moirai"
version = "1.3.27"
description = "Digital Control Manager Backend"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acristoffers/moirai"
keywords = ["digital control manager"]

[tool.poetry.scripts]
moirai = 'moirai.moirai:start'

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ahio = "^1.0.31"
cheroot = "^8.5.2"
python-dateutil = "^2.8.1"
pymongo = "^3.11.4"
numpy = "^1.21.0"
appdirs = "^1.4.4"
Flask = "^2.0.1"
scipy = "^1.9.0"
mysql-connector = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
